tests/ui/eii/final_artifact_needs_impl.stderr
error: `#[eii1]` function required, but not found
  --> $DIR/final_artifact_needs_impl.rs:4:7
   |
LL | #[eii(eii1)]
   |       ^^^^ expected because `#[eii1]` was declared here in crate `final_artifact_needs_impl`
   |
   = help: expected at least one implementation in crate `final_artifact_needs_impl` or any of its dependencies

error: aborting due to 1 previous error

